# data-engineer-course

lesson1/: README.md
lesson2/: compose.yaml  hadoop.Dockerfile  sqoop.Dockerfile
lesson3/: README.md
lesson4/: README.md  intro.ipynb
lesson5/: .gitignore  README.md  multi-worker.compose.yml  single-node.compose.yml
lesson6/: .gitignore  README.md  db-integration.compose.yml
lesson6/app/: Dockerfile  Untitled.ipynb  pyproject.toml
lesson7/: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  start.bat  start.sh
lesson7/configs/kafka-connect/: connect-distributed.properties
lesson7/configs/spark/: spark-defaults.conf
lesson7/configs/trino/catalog/: minio.properties  postgres.properties
lesson7/init-scripts/: enable-wal.sql  init-pagila.sql
lesson7/notebooks/: 1_intro_architecture.ipynb
lesson7/presentation/: .gitignore  Lesson7_DataLakehouse.pptx
lesson7/scripts/: download-jars.sh  init-kafka-connector.sh  verify-pipeline.sh
lesson7/spark-jobs/: 01_kafka_to_bronze.py  02_bronze_to_silver.py  03_silver_to_gold.py
